--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 Data/110_model*
 Data/120_ts_model_list.rds
 110_Create_season_adjusted_data_cache/*
+Data_analysed/*
+Data_analysed2/*
+Figures/Partial_plots/*
